--- a/style.css
+++ b/style.css
@@ -7,14 +7,19 @@
 body {
   font-family: Arial, sans-serif;
 }
-
+.header {
+  width: 100%;
+  background-color: #2c3e50;
+}
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
   padding: 15px 30px;
   color: white;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
 }
 .logo {
   color: #ecf0f1;
@@ -22,14 +27,39 @@ body {
   font-weight: bold;
   text-decoration: none;
 }
-.nav-links ul{
+.nav-links,
+.search-field {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.search-field {
+  flex: 1;
+  gap: 0;
+}
+.search-field input {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 8px;
+}
+.search-field button {
+  border: none;
+  outline: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 5px;
+  font-size: 1.163rem;
+  display: flex;
+  align-items: center;
+}
+.nav-links ul {
   display: flex;
   align-items: flex-start;
-  flex-direction: column;
   gap: 20px;
 }
-.nav-links ul li{
-    list-style: none;
+.nav-links ul li {
+  list-style: none;
 }
 .nav-links a {
   color: white;
@@ -44,8 +74,8 @@ body {
 .search-field {
   padding: 8px;
   border: none;
-  border-radius: 4px;
-  margin-left: 20px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 .menu-icon {
@@ -62,12 +92,14 @@ body {
     top: 62px;
     left: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #2c3e50;
     padding: 30px;
     transition: transform 0.3s ease-in-out;
     transform: translateY(-100%);
   }
-
+  .nav-links ul {
+    flex-direction: column;
+  }
   .nav-links.active {
     display: flex;
     align-items: flex-start;
@@ -77,13 +109,6 @@ body {
   .nav-links a {
     margin: 10px 0;
   }
-
-  .search-field {
-    margin-left: 0;
-    width: 100%;
-    margin-top: 10px;
-  }
-
   .menu-icon {
     display: block;
   }
