--- a/style.css
+++ b/style.css
@@ -42,14 +42,16 @@ body {
   border: none;
   outline: none;
   padding: 8px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 .search-field button {
   border: none;
   outline: none;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  padding: 5px;
-  font-size: 1.163rem;
+  padding: 7.5px;
+  font-size: 1rem;
   display: flex;
   align-items: center;
 }
